--- a/css/skins/pink.css
+++ b/css/skins/pink.css
@@ -13,6 +13,8 @@
     border-color: #fb839e;
 }
 
+
+.main-timeline-box .iconBackground ,
 .couple-section .social-links a:hover i {
     background-color: #fb839e;
 }
