Update the story section

--- a/css/skins/pink.css
+++ b/css/skins/pink.css
@@ -1,4 +1,4 @@
-
+.story-section .story-item i,
 .couple-section .social-links a i,
 .couple-section .couple i.fa-heart,
 .couple-section .couple h3,
