--- a/css/style.css
+++ b/css/style.css
@@ -294,112 +294,120 @@ header, section, footer {
 }
 
 
-
-
 /* Story Section */
 
-.story-box{
-	padding: 70px 0px;
+.story-section {
+    padding: 80px 0 0;
 }
 
-.align-left {
-    text-align: left;
-}
-.align-right {
-    text-align: right;
-}
-
-
-.main-timeline-box{
-	position: relative;
-	word-wrap: break-word;
-}
-
-.main-timeline-box .timeline-element {
-    margin-bottom: 50px;
+.story-section .story-content{
+    flex:0 0 100%;
+    max-width: 100%;
     position: relative;
-    word-wrap: break-word;
-    word-break: break-word;
-    display: -webkit-flex;
-    flex-direction: row;
-    -webkit-flex-direction: row;
+
 }
-.main-timeline-box .reverse {
-    flex-direction: row-reverse;
-    -webkit-flex-direction: row-reverse;
-}
-.main-timeline-box .separline::before {
-    top: 20px;
-    bottom: 0;
+
+.story-section .story-content:before{
+    content: '';
     position: absolute;
-    content: "";
-    width: 2px;
-    left: calc(50% - 1px);
-    height: calc(100% + 4rem);
+    left: 50%;
+    width: 1px;
+    height: 100%;
+    top: 0;
     background-color: #ccc;
 }
 
-.main-timeline-box .iconBackground {
+.story-section .story-item i{
     position: absolute;
     left: 50%;
-    width: 20px;
-    height: 20px;
-    line-height: 30px;
     text-align: center;
-    border-radius: 50%;
-    font-size: 30px;
-    display: inline-block;
-    top: 20px;
-    margin-left: -10px;
-}
-.main-timeline-box .timeline-text-content {
-   
-	background: #f1f1f1;
-}
-.main-timeline-box .reverse .timeline-text-content{
-	margin-right: 30px;
-}
-.main-timeline-box .reverse .time-line-date-content p {
-    float: left;
-	
-	background: #f1f1f1;
-}
-.main-timeline-box .reverse .time-line-date-content {
-	margin-right: 30px;
+    padding: 5px;
+    margin-left: -15px;
+    width: 31px;
+    background-color: #f3f2f1;
+    font-size: 18px;
 }
 
-.display-font{
-	font-family: 'Marck Script', cursive;
-	font-size: 30px;
-	color: #222222;
-}
-.main-timeline-box .timeline-text-content{
-	
-}
-.main-timeline-box .time-line-date-content p {
-    float: right;
-	padding: 10px 10px;
-	background: #f1f1f1;
-    border-radius: 10px;
-}
-.main-timeline-box .time-line-date-content {
-	margin-right: 30px;
+.story-section .story-item {
+    display: flex;
+    flex-wrap: wrap;
+    flex: 0 0 100%;
+    max-width: 100%;
+    margin-bottom: 50px;
+    position: relative;
 }
 
-.main-timeline-box .time-line-date-content .mbr-timeline-date{
-	background: #dd666c;
-	color: #ffffff;
-}
-.main-timeline-box .reverse .time-line-date-content .mbr-timeline-date{
-	background: #63c7bd;
-	color: #ffffff;
+.story-section .story-item:last-child{
+    margin-bottom: 0;
 }
 
-.story-content{
-    width: 40%;  
+.story-section .story-item:nth-child(even){
+    flex-direction: row-reverse;
 }
 
-.story-content-right{
-    width: 40%;
-    float: right;
+.story-section .story-item:nth-child(odd) .story-text{
+    padding: 0 60px 0 15px;
+    text-align: right;
+}
+
+.story-section .story-item:nth-child(odd) .story-text h3{
+    padding-top: 20px;
+    padding-bottom: 20px;
+    margin-left: 50%;
+    width: 50%;
+    background-color: #DD666C;
+    text-align: center;
+}
+.story-section .story-item:nth-child(even) .story-text h3{
+    padding-top: 20px;
+    padding-bottom: 20px;
+    margin-right: 50%;
+    width: 50%;
+    background-color: #63C7BD;
+    text-align: center;
+    color: #f3f2f1;
+}
+
+.story-section .story-item:nth-child(odd) .story-img{
+    padding: 0 15px 0 60px;
+}
+
+.story-section .story-item:nth-child(even) .story-text{
+    padding: 0 15px 0 60px;
+}
+
+.story-section .story-item:nth-child(even) .story-img{
+    padding: 0 60px 0 15px;
+}
+
+
+.story-section .story-text,
+.story-section .story-img{
+    flex: 0 0 50%;
+    max-width: 50%;
+}
+
+.story-section .story-text h3{
+    color: #F1F1F1;
+    font-size: 25px;
+    margin: 0 0 8px;
+    font-weight: 500;
+    text-transform: capitalize;
+}
+.story-section .story-text span.date{
+    font-size: 15px;
+    font-weight: 700;
+    color: #555;
+    margin: 0 0 15px;
+    display: block;
+    text-transform: capitalize;
+}
+
+.story-section .story-text p{
+    font-size: 16px;
+    line-height: 26px;
+    margin: 0;
+    color: #818181;
+    padding: 20px;
+    background-color: #c7c6c1;
 }
