--- a/css/style.css
+++ b/css/style.css
@@ -42,6 +42,10 @@ header, section, footer {
     flex-wrap: wrap;
 }
 
+.justify-content-center{
+    justify-content: center;
+}
+
 .justify-content-between{
     justify-content: space-between;
 }
@@ -298,6 +302,7 @@ header, section, footer {
 
 .story-section {
     padding: 80px 0 0;
+    margin-bottom: 50px;
 }
 
 .story-section .story-content{
@@ -410,4 +415,85 @@ header, section, footer {
     color: #818181;
     padding: 20px;
     background-color: #c7c6c1;
+}
+
+
+
+/* Event section */
+
+.event-section{
+    padding: 80px 0 130px;
+
+}
+
+.event-section .section-title h2{
+    color: #fff;
+}
+
+.event-section .event-item{
+    padding: 0 15px;
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.event-section .event-item:nth-child(2){
+    transform:translateY(50px)
+}
+
+.event-section .event-item-inner{
+    background-color: #fff;
+    padding-top: 60px;
+    padding-left: 45px;
+    padding-right: 45px;
+    padding-bottom: 10px;
+    text-align: center;
+    box-shadow: 0 0 10px #888888;
+    flex: 0 0 100%;
+    max-width: 100%;
+    position: relative;
+    z-index: 1;
+}
+
+.event-section .event-item-inner::before{
+    content: '';
+    position: absolute;
+    left: 15px;
+    top: 15px;
+    right: 15px;
+    bottom: 15px;
+    border: 5px solid transparent;
+    z-index: -1;
+}
+
+.event-section .event-item-inner h3{
+    color: #000;
+    font-weight: 500;
+    font-size: 24px; 
+    margin: 0 0 15px; 
+    text-transform: capitalize;
+    border-bottom: 1px solid #ccc;
+    padding-bottom: 5px;
+    display: inline-block;
+}
+
+.event-section .event-item-inner span{
+    display: block;
+    font-weight: 500;
+    font-size: 16px;
+}
+
+.event-section .event-item-inner span.time{
+    margin-bottom: 15px;
+}
+
+.event-section .event-item-inner p{
+    font-size: 16px;
+    line-height: 26px;
+    color: #555;
+    margin: 0;
+}
+
+.event-section .event-item-inner img{
+    padding-top: 30px;
+    
 }
