--- a/css/style.css
+++ b/css/style.css
@@ -423,8 +423,8 @@ header, section, footer {
 
 .event-section{
     padding: 80px 0 130px;
-
-}
+    margin-bottom: 50px;
+}   
 
 .event-section .section-title h2{
     color: #fff;
@@ -496,4 +496,108 @@ header, section, footer {
 .event-section .event-item-inner img{
     padding-top: 30px;
     
+}
+
+
+/* Our Memories section */
+
+.gallery-section{
+    width: 100%;
+    padding: 60px 0;
+    background: #F1F1F1;
+}
+
+.inner-width{
+    width: 100%;
+    max-width: 100%;
+    margin: auto;
+    padding: 0 20px;
+}
+
+.border{
+    width: 180px;
+    height: 4px;
+    background: #333;
+    margin: 60px auto;
+}
+
+.gallery-section .gallery{
+    display: flex;
+    flex-wrap: wrap-reverse;
+    justify-content: center;
+}
+
+.gallery-section .image{
+    flex: 25%;
+    overflow: hidden;
+    cursor: pointer;
+}
+
+.gallery-section .image img{
+    width: 100%;
+    height: 100%;
+    -webkit-transform: scale(1);
+	transform: scale(1);
+	-webkit-transition: .3s ease-in-out;
+	transition: .3s ease-in-out;
+}
+
+.gallery-section .image:hover img{
+    -webkit-transform: scale(1.3);
+	transform: scale(1.3);
+}
+
+@media screen and (max-width: 960px) {
+    .gallery-section .img{
+        flex: 33.33%;
+    }
+}
+
+@media screen and (max-width: 768px) {
+    .gallery-section .img{
+        flex: 50%;
+    }
+}
+
+@media screen and (max-width: 480) {
+    .gallery-section .img{
+        flex: 100%;
+    }
+}
+
+
+
+/* Our Family section */
+
+.family-section{
+    padding: 80px 0 130px;
+    margin-bottom: 50px;
+}
+
+.family-section .container{
+    max-width: 80%;
+}
+.members-section{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+
+}
+
+.member-image{
+    align-items: center;
+    justify-content: center;
+}
+
+.single-member{
+    width: 30%;
+    border: 10px solid #fff;
+	box-shadow: 0 2px 5px rgba(0,0,0,.1);
+    margin-bottom: 20px;
+}
+
+.family-info h4, .family-info p{
+    text-align: center;
+    line-height: 3;
+    font-size: 20px;
 }
