--- a/css/style.css
+++ b/css/style.css
@@ -551,23 +551,7 @@ header, section, footer {
 	transform: scale(1.3);
 }
 
-@media screen and (max-width: 960px) {
-    .gallery-section .img{
-        flex: 33.33%;
-    }
-}
 
-@media screen and (max-width: 768px) {
-    .gallery-section .img{
-        flex: 50%;
-    }
-}
-
-@media screen and (max-width: 480) {
-    .gallery-section .img{
-        flex: 100%;
-    }
-}
 
 
 
@@ -600,8 +584,44 @@ header, section, footer {
     margin-bottom: 20px;
 }
 
-.family-info h4, .family-info p{
+.family-info h3, .family-info p{
     text-align: center;
-    line-height: 3;
-    font-size: 20px;
+    line-height: 2.5;
+    font-size: 16px;
+}
+
+
+
+
+
+@media screen and (max-width: 960px) {
+    .gallery-section .image{
+        flex: 33.33%;
+    }
+}
+
+@media screen and (max-width: 768px) {
+    .gallery-section .image{
+        flex: 50%;
+    }
+    .single-member{
+        width: 45%;
+    }
+    .family-info h4, .family-info p{
+        font-size: 12px;
+        line-height: 2;
+    }
+    .family-section .container{
+        max-width: 90%;
+    }
+    
+}
+
+@media screen and (max-width: 480) {
+    .gallery-section .image{
+        flex: 100%;
+    }
+    .family-section .container{
+        max-width: 100%;
+    }
 }
