--- a/css/style.css
+++ b/css/style.css
@@ -30,6 +30,127 @@ img{
     margin: auto;
 }
 
+#preloader {
+    width: 100%;
+    height: 100%;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    background: #dd666c;
+    z-index: 11000;
+    position: fixed;
+    display: block;
+}
+
+.pulse {
+  height: 150px;
+  width: 200px;
+  overflow: hidden;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  margin: auto;
+}
+.pulse:after {
+  content: '';
+  display: block;
+  background: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 200px 100px" enable-background="new 0 0 200px 100px" xml:space="preserve"><polyline fill="none" stroke-width="3px" stroke="white" points="2.4,58.7 70.8,58.7 76.1,46.2 81.1,58.7 89.9,58.7 93.8,66.5 102.8,22.7 110.6,78.7 115.3,58.7 126.4,58.7 134.4,54.7 142.4,58.7 197.8,58.7 "/></svg>') 0 0 no-repeat;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  -webkit-animation: 2s pulse linear infinite;
+  animation: 2s pulse linear infinite;
+    clip: rect(0, 0, 100px, 0);
+}
+.pulse:before {
+  content: '';
+  position: absolute;
+  z-index: -1;
+  left: 2px;
+  right: 2px;
+  bottom: 0;
+  top: 16px;
+  margin: auto;
+  height: 3px;
+
+}
+
+
+@-webkit-keyframes pulse {
+  0% {
+    clip: rect(0, 0, 100px, 0);
+    opacity: 0.4;
+  }
+  4% {
+    clip: rect(0, 66.66667px, 100px, 0);
+    opacity: 0.6;
+  }
+  15% {
+    clip: rect(0, 133.33333px, 100px, 0);
+    opacity: 0.8;
+  }
+  20% {
+    clip: rect(0, 300px, 100px, 0);
+     opacity: 1;
+  }
+
+  80% {
+    clip: rect(0, 300px, 100px, 0);
+     opacity:0;
+  }
+
+  90% {
+    clip: rect(0, 300px, 100px, 0);
+    opacity: 0;
+  }
+
+  100% {
+    clip: rect(0, 300px, 100px, 0);
+    opacity:0;
+ }
+}
+@keyframes pulse {
+  0% {
+    clip: rect(0, 0, 100px, 0);
+  }
+  4% {
+    clip: rect(0, 66.66667px, 100px, 0);
+  }
+  15% {
+    clip: rect(0, 133.33333px, 100px, 0);
+  }
+  20% {
+    clip: rect(0, 300px, 100px, 0);
+     opacity:1;
+  }
+
+  80% {
+    clip: rect(0, 300px, 100px, 0);
+     opacity:0;
+  }
+
+  90% {
+    opacity: 0;
+  }
+
+  100% {
+    clip: rect(0, 300px, 100px, 0);
+    opacity:0;
+ }
+  
+}
+
+.pulse {
+	text-align : center;
+}
+.pulse i{
+	color: #ffffff;
+	font-size: 38px;
+}
+
 
 
 header, section, footer {
@@ -785,6 +906,12 @@ textarea{
         color: #555;
 
     }
+
+    #row-mobile{
+        justify-content: center;
+        align-items: center;
+    }
+
 }
 
 @media screen and (max-width: 768px) {
@@ -802,10 +929,84 @@ textarea{
         max-width: 90%;
     }
 
-    
+    .home-section .home-content h1{
+        font-size: 60px;
+    }
 
-    
+    .couple-section .couple{
+        flex: 0 0 100%;
+        max-width: 100%;
+        padding: 0 15px;
+    }
 
+    .couple-section .couple:nth-child(2){
+        margin-top: 50px;
+    }
+
+    .couple-section .couple:nth-child(2):before{
+        content: none;
+    }
+
+    .couple-section .couple i.fa-heart{
+        display: none;
+    }
+
+   
+    .story-section .story-text, .story-section .story-img{
+        flex: 0 0 100%;
+        max-width: 100%;
+    }
+
+    .story-section .story-item:nth-child(odd) .story-text{
+        padding: 0 60px 0 60px;
+        text-align: left;
+    }
+
+    .story-section .story-item:nth-child(even) .story-img{
+        padding: 0 150px 0 15px;
+    }
+
+    .story-sectino .story-img{
+        margin-top: 20px;
+    }
+
+    .story-section .story-content:before{
+        left: 20px;
+    }
+
+    .story-section .story-item i{
+        margin-left: 0px;
+        left: 5px;
+    }
+
+    .story-section .story-item:nth-child(odd) .story-text h3{
+        margin-left: 0;
+    }
+
+    .story-section .story-item:nth-child(even) .story-img{
+        padding: 0 15px 0 60px;
+    }
+
+    .story-section .story-item:nth-child(2n+1) .story-text h3 {
+        padding-top: 0px;
+        padding-bottom: 0px;
+        background-color: transparent;
+        color: #dd666c;
+        text-align: left;
+    }
+    .story-section .story-item:nth-child(even) .story-text h3{
+        padding-top: 0px;
+        padding-bottom: 0px;
+        background-color: transparent;
+        color: #63C7BD;
+        text-align: left;
+    }
+
+    .story-section .story-item:nth-child(2n+1) .story-text{
+        padding-right: 15px;
+    }
+
+   
 }
 
 @media screen and (max-width: 480) {
@@ -815,4 +1016,8 @@ textarea{
     .family-section .container{
         max-width: 100%;
     }
+
+   
+    
 }
+
