--- a/css/style.css
+++ b/css/style.css
@@ -195,13 +195,15 @@ header, section, footer {
 
 /* HEADER */
 .header{
-    position: absolute;
+    /* position: absolute; */
     width: 100%;
     left: 0;
     top: 0;
     z-index: 99;
     border-bottom: 1px solid rgba(255, 255, 255, 0.1);
     transition: all 0.5s ease ;
+    padding-top: 5px;
+    padding-bottom: 5px;
 }
 
 .fixed{
@@ -217,7 +219,7 @@ header, section, footer {
 
 
 .header .logo a {
-    color: #fff;
+    color: black;
     font-weight: bold;
     font-size: 2em;
     font-family: 'Vibur', cursive;
@@ -246,7 +248,7 @@ header, section, footer {
 .header .nav ul li a {
     display: block;
     padding:15px;
-    color: #fff;
+    color:black;
     text-transform: uppercase;
     font-size: 15px;
     text-decoration: none;
@@ -263,7 +265,7 @@ header, section, footer {
     height: 34px;
     width: 40px;
     border-radius: 3px;
-    border: 1px solid #fff;
+    border: 1px solid #dd666c;
     cursor: pointer;
     display: flex;
     align-items: center;
@@ -276,18 +278,18 @@ header, section, footer {
     display: block;
     height: 1px;
     width: 16px;
-    background-color: #fff;
+    background-color: #63C7BD;
     position: relative;
 }
 
 .header.fixed .hamburger-btn {
-    border-color: #000;
+    border-color: #dd666c;
     background-color: white;
 }
 .header.fixed .hamburger-btn span:after,
 .header.fixed .hamburger-btn span:before,
 .header.fixed .hamburger-btn span{
-    background-color: #000;
+    background-color: #63C7BD;
 }
 
 .header .hamburger-btn span:before,
@@ -297,7 +299,7 @@ header, section, footer {
     height: 1px;
     width: 100%;
     left: 0;
-    background-color: #fff;
+    background-color: #63C7BD;
 }
 
 .header .hamburger-btn span:before{
@@ -311,10 +313,74 @@ header, section, footer {
 
 
 
-
-
-
 /* HOME SECTION */
+
+
+
+.lbox-caption {
+    display: table;
+    height: 100%;
+    width: 100%;
+}
+
+.lbox-caption {
+    position: absolute;
+    margin: 0 auto;
+    left: 0;
+    right: 0;
+	z-index: 10;
+}
+
+.lbox-details {
+    display: table-cell;
+    text-align: center;
+    vertical-align: middle;
+	position: relative;
+}
+
+.lbox-details::before{
+	content: "";
+	background: rgba(0,0,0,0.5);
+	position: absolute;
+	top: 0px;
+	left: 0px;
+	width: 100%;
+	height: 100%;
+	z-index: 2;
+}
+
+.lbox-details h1{
+	font-size: 68px;
+	font-family: 'Marck Script', cursive;
+	color: #ffffff;
+	position: relative;
+	z-index: 3;
+}
+
+.lbox-details h2{
+	font-size: 48px;
+	color: #ffffff;
+	position: relative;
+	z-index: 3;
+}
+.lbox-details p{
+	color: #ffffff;
+	position: relative;
+	z-index: 3;
+}
+.lbox-details p strong{
+	color: #dd666c;
+	font-size: 40px;
+	font-family: 'Marck Script', cursive;
+}
+
+
+
+
+
+
+
+/* HOME SECTION
 .home-section{
     min-height: 100vh;
     position: relative;
@@ -411,7 +477,7 @@ header, section, footer {
     animation: fadeInTop 1s ease forwards;
     opacity: 0;
     animation-delay: 1s;
-}
+} */
 
 
 /* COUPLE SECTION */
@@ -869,6 +935,12 @@ textarea{
 
 
 @media screen and (max-width: 960px) {
+    .header{
+        position: sticky;
+    }
+
+   
+
     .gallery-section .image{
         flex: 33.33%;
     }
@@ -915,6 +987,25 @@ textarea{
 }
 
 @media screen and (max-width: 768px) {
+
+
+    .lbox-details h1{
+        font-size: 18px;
+        padding-bottom: 10px;
+    }
+    
+    .lbox-details h2{
+        font-size: 15px;
+        padding-bottom: 10px;
+    }
+    .lbox-details p{
+        font-size: 15px;
+    }
+    .lbox-details p strong{
+       
+        font-size: 15px;
+    }
+    
     .gallery-section .image{
         flex: 50%;
     }
@@ -1017,7 +1108,12 @@ textarea{
         max-width: 100%;
     }
 
+    
    
     
 }
+
+
+
+
 
